tests/baselines/reference/tsxGenericAttributesType3.errors.txt
file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.


==== file.tsx (1 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    class B1<T extends { x: string } = { x:string } > extends React.Component<T, {}> {
        render() {
            return <div>hi</div>; 
        }
    }
    class B<U> extends React.Component<U, {}> {
        render() {
            return <B1 {...this.props} x="hi" />;
        }
    }